--- a/style.css
+++ b/style.css
@@ -1,87 +1,91 @@
 html {
-    height: 100%;
+  height: 100%;
 }
 
 .body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    background: linear-gradient(135deg, #FFD131, #FCA503);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  background: linear-gradient(135deg, #ffd131, #fca503);
 }
 
 .game-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: white;
-    width: 70%;
-    height: 90%;
-    border-radius: 20px;
-    padding-inline: 20px;
-    padding-block: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: white;
+  width: 70%;
+  height: 90%;
+  border-radius: 20px;
+  padding-inline: 20px;
+  padding-block: 40px;
 }
-
 
 .button-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    column-gap: 40px;
-    border: none;
-    margin-top: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 40px;
+  border: none;
+  margin-top: 100px;
 }
 
-.rock-button, .paper-button, .scissors-button {
-    border-radius: 50%;
-    background-color: #FED71B;
-    padding: 15px;
-    cursor: pointer;
+.rock-button,
+.paper-button,
+.scissors-button {
+  border-radius: 50%;
+  background-color: #fed71b;
+  padding: 15px;
+  cursor: pointer;
 }
 
-.human-score-label, .computer-score-label {
-    margin-bottom: 0;
-    margin-right: 10px;
+.human-score-label,
+.computer-score-label {
+  margin-bottom: 0;
+  margin-right: 10px;
 }
 
-.human-score-label, .human-choice-label {
-    margin-top: 20px;
+.human-score-label,
+.human-choice-label {
+  margin-top: 20px;
 }
 
-.human-choice-label, .computer-choice-label {
-    margin-bottom: 5px;
+.human-choice-label,
+.computer-choice-label {
+  margin-bottom: 5px;
 }
 
 .current-text-container {
-    display: flex;
-    justify-content: center;
-    margin: auto;
-    margin-top: 20px;
-    width: 170px;
-    padding-block: 10px;
-    padding-inline: 5px;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  margin-top: 20px;
+  width: 170px;
+  padding-block: 10px;
+  padding-inline: 5px;
 }
 
 .current-text {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .background-lose {
-    background-color: #FFDDE0;
+  background-color: #ffdde0;
 }
 
 .background-win {
-    background-color: #d6fccd;
+  background-color: #d6fccd;
 }
 
 .background-tie {
-    background-color: #b3e4f7;
+  background-color: #b3e4f7;
 }
 
 .modal-content {
-    display: flex;
-    align-items: center;
-    margin: auto;
-    padding-top: 20px;
+  display: flex;
+  align-items: center;
+  margin: auto;
+  padding-top: 20px;
 }
